--- a/test.ipynb
+++ b/test.ipynb
@@ -2,6 +2,32 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "c3507927",
+   "metadata": {},
+   "source": [
+    "■初期画面"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "cb2428c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "【ウチダ電鉄 交通系ICカード検証システム】1: 乗車駅選択2: チャージ機能使用する機能を入力してください(終了する場合には99 を入力)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"【ウチダ電鉄 交通系ICカード検証システム】1: 乗車駅選択2: チャージ機能使用する機能を入力してください(終了する場合には99 を入力)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c79abd28",
    "metadata": {},
    "source": [
@@ -10,8 +36,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv (3.12.6)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
