--- a/main.ipynb
+++ b/main.ipynb
@@ -10,27 +10,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "f2118064",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "チャージ残高は[30]円です。\n",
+      "残高不足です\n",
+      "3000円自動チャージします\n",
+      "3030\n",
+      "3000\n",
+      "30\n",
+      "精算後の残高は[30]円です。\n",
+      "残高が500 円未満のため3000 円自動チャージします\n",
+      "チャージ残高は[3030]円です。\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3030"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def select_station():\n",
     "    print(\"select_station\")\n",
     "    return 0\n",
     "\n",
-    "def pay():\n",
-    "    print(\"pay\")\n",
-    "    return 0\n",
+    "def pay(balance , fare):\n",
+    "    print(f\"チャージ残高は[{balance}]円です。\")\n",
+    "    if balance < fare:\n",
+    "        print(\"残高不足です\")\n",
+    "        while (balance < fare):\n",
+    "            print(\"3000円自動チャージします\")\n",
+    "            balance += 3000\n",
+    "            print(balance)\n",
+    "        balance -= fare\n",
+    "        print(fare)# でばっく\n",
+    "        print(balance)# でばっく\n",
+    "        print(f\"精算後の残高は[{balance}]円です。\")\n",
+    "        if balance < 500:\n",
+    "            print(\"残高が500 円未満のため3000 円自動チャージします\")\n",
+    "            balance += 3000\n",
+    "            print(f\"チャージ残高は[{balance}]円です。\")\n",
+    "    return balance\n",
     "\n",
     "def charge():\n",
     "    print(\"charge\")\n",
-    "    return 0"
+    "    return 0\n",
+    "pay(30,3000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "00ecb3bb",
    "metadata": {},
    "outputs": [
@@ -38,53 +79,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "menu\n",
-      "select_station\n",
-      "pay\n",
-      "menu\n",
-      "pay\n",
-      "menu\n",
-      "エラー\n",
-      "menu\n",
-      "エラー\n",
-      "menu\n",
-      "エラー\n",
-      "menu\n",
-      "エラー\n",
-      "menu\n",
-      "エラー\n",
-      "menu\n",
-      "エラー\n",
-      "menu\n",
-      "エラー\n",
-      "menu\n",
+      "【ウチダ電鉄 交通系ICカード検証システム】\n",
+      "\n",
+      "1: 乗車駅選択\n",
+      "2: チャージ機能\n",
+      "\n",
+      "使用する機能を入力してください(終了する場合には99 を入力)\n",
+      "\n",
+      "正しい数値を入力してください。 \n",
+      "【ウチダ電鉄 交通系ICカード検証システム】\n",
+      "\n",
+      "1: 乗車駅選択\n",
+      "2: チャージ機能\n",
+      "\n",
+      "使用する機能を入力してください(終了する場合には99 を入力)\n",
+      "\n",
+      "正しい数値を入力してください。 \n",
+      "【ウチダ電鉄 交通系ICカード検証システム】\n",
+      "\n",
+      "1: 乗車駅選択\n",
+      "2: チャージ機能\n",
+      "\n",
+      "使用する機能を入力してください(終了する場合には99 を入力)\n",
+      "\n",
       "システムを終了します\n"
      ]
     }
    ],
    "source": [
     "menu = 1\n",
-    "balance = 500\n",
     "def main(menu):\n",
+    "    \n",
+    "    balance = 500\n",
+    "    print (\"【ウチダ電鉄 交通系ICカード検証システム】\\n\")\n",
+    "    print (\"1: 乗車駅選択\\n2: チャージ機能\\n\")\n",
+    "    print (\"使用する機能を入力してください(終了する場合には99 を入力)\\n\")\n",
     "    while(True):\n",
-    "        print (\"menu\")\n",
-    "        menu = int(input())\n",
-    "        if menu == 1:\n",
-    "            fare = select_station()\n",
-    "            if fare == 0:\n",
+    "        try:\n",
+    "            menu = int(input())\n",
+    "\n",
+    "            if menu == 1:\n",
+    "                fare = select_station()\n",
+    "                if fare == 0:\n",
+    "                    balance = pay()\n",
+    "                \n",
+    "            elif menu == 2:\n",
     "                balance = pay()\n",
-    "            \n",
-    "        elif menu == 2:\n",
-    "            balance = pay()\n",
     "\n",
-    "        elif menu == 99:\n",
-    "            print(\"システムを終了します\")\n",
-    "            break\n",
-    "        else:\n",
-    "            print(\"エラー\")\n",
+    "            elif menu == 99:\n",
+    "                print(\"システムを終了します\")\n",
+    "                break\n",
+    "            else:\n",
+    "                print(\"正しい数値を入力してください。 \")\n",
+    "        except ValueError:\n",
+    "            print(\"正しい数値を入力してください。 \")\n",
     "\n",
     "\n",
-    "main(menu)"
+    "if __name__ == \"__main__\":\n",
+    "    main(0)"
    ]
   },
   {
@@ -93,23 +145,7 @@
    "id": "ca649007",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "    try:\n",
-    "    num1 = int(input(\"1つ目の整数: \"))\n",
-    "    num2 = int(input(\"2つ目の整数: \"))\n",
-    "\n",
-    "    if menu = 1:\n",
-    "        \n",
-    "    elif menu = 2:\n",
-    "\n",
-    "    elif menu = 99:\n",
-    "\n",
-    "    else\n",
-    "\n",
-    "    except ValueError:\n",
-    "        print(\"エラー: 有効な整数を入力してください。\")\n",
-    "        return"
-   ]
+   "source": []
   }
  ],
  "metadata": {
