--- a/A.ipynb
+++ b/A.ipynb
@@ -26,7 +26,18 @@
     "            print(\"数字を入力してください\") #数値が入れられなかった場合\n",
     "\n",
     "        else:\n",
-    "            return(select)\n",
+    "            if select == 1:\n",
+    "                return(select)  \n",
+    "\n",
+    "            elif select == 2:\n",
+    "                return(select) \n",
+    "\n",
+    "            elif select == 99:  #テスト表示\n",
+    "                return(select) \n",
+    "\n",
+    "            else:\n",
+    "                print(\"正しい数値を入力してください.\")\n",
+    "        \n",
     "def charge(balance):\n",
     "\n",
     "        #表示用\n",
@@ -98,15 +109,15 @@
     "            print(\"3000円自動チャージします\")\n",
     "            balance += 3000\n",
     "            print(balance)\n",
-    "        balance -= fare\n",
-    "        print(fare)# でばっく\n",
-    "        print(balance)# でばっく\n",
-    "        print(f\"精算後の残高は[{balance}]円です。\")\n",
-    "        if balance < 500:\n",
-    "            print(\"残高が500 円未満のため3000 円自動チャージします\")\n",
-    "            balance += 3000\n",
-    "            print(f\"チャージ残高は[{balance}]円です。\")\n",
-    "    return balance\n"
+    "    balance -= fare\n",
+    "    print(fare)# でばっく\n",
+    "    print(balance)# でばっく\n",
+    "    print(f\"精算後の残高は[{balance}]円です。\")\n",
+    "    if balance < 500:\n",
+    "        print(\"残高が500 円未満のため3000 円自動チャージします\")\n",
+    "        balance += 3000\n",
+    "        print(f\"チャージ残高は[{balance}]円です。\")\n",
+    "    return balance ,fare\n"
    ]
   },
   {
@@ -114,56 +125,24 @@
    "execution_count": null,
    "id": "f310d003",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "【ウチダ電鉄　交通系ICカード検証システム】\n",
-      "\n",
-      "\n",
-      "1:乗車駅選択\n",
-      "2:チャージ機能\n",
-      "\n",
-      "\n",
-      "使用する機能を入力してください(終了する場合には99を入力)\n",
-      "終了\n",
-      "正しい数値を入力してください。 \n",
-      "【ウチダ電鉄　交通系ICカード検証システム】\n",
-      "\n",
-      "\n",
-      "1:乗車駅選択\n",
-      "2:チャージ機能\n",
-      "\n",
-      "\n",
-      "使用する機能を入力してください(終了する場合には99を入力)\n",
-      "数字を入力してください\n",
-      "数字を入力してください\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def main():\n",
     "    balance = 500\n",
     "    while(True):\n",
-    "        try:\n",
-    "            main = menu()\n",
-    "            if main == 1:\n",
-    "                fare = select_station()\n",
-    "                if fare != 0:\n",
-    "                    balance = pay(balance , fare)\n",
-    "                \n",
-    "            elif main == 2:\n",
-    "                balance = charge()\n",
-    "\n",
-    "            elif main == 99:\n",
-    "                print(\"システムを終了します\")\n",
-    "                break\n",
-    "            else:\n",
-    "                print(\"正しい数値を入力してください。 \")\n",
-    "        except ValueError:\n",
+    "        main = menu()\n",
+    "        if main == 1:\n",
+    "            fare = select_station()\n",
+    "            if fare != 0:\n",
+    "                balance = pay(balance , fare)\n",
+    "            \n",
+    "        elif main == 2:\n",
+    "            balance = charge(balance)\n",
+    "        elif main == 99:\n",
+    "            print(\"システムを終了します\")\n",
+    "            break\n",
+    "        else:\n",
     "            print(\"正しい数値を入力してください。 \")\n",
-    "\n",
     "if __name__ == \"__main__\":\n",
     "        main()\n",
     "\n"
@@ -174,22 +153,7 @@
    "execution_count": null,
    "id": "a0073ef5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "【ウチダ電鉄　交通系ICカード検証システム】\n",
-      "\n",
-      "\n",
-      "1:乗車駅選択\n",
-      "2:チャージ機能\n",
-      "\n",
-      "\n",
-      "使用する機能を入力してください(終了する場合には99を入力)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "menu()\n"
    ]
