--- a/A.ipynb
+++ b/A.ipynb
@@ -108,15 +108,15 @@
     "        while (balance < fare):\n",
     "            print(\"3000円自動チャージします\")\n",
     "            balance += 3000\n",
-    "            print(balance)\n",
+    "            print(f\"チャージ残高は{balance}円です。\")\n",
     "    balance -= fare\n",
-    "    print(fare)# でばっく\n",
-    "    print(balance)# でばっく\n",
-    "    print(f\"精算後の残高は[{balance}]円です。\")\n",
+    "    #print(fare)# でばっく\n",
+    "    #print(balance)# でばっく\n",
+    "    print(f\"精算後の残高は{balance}円です。\")\n",
     "    if balance < 500:\n",
     "        print(\"残高が500 円未満のため3000 円自動チャージします\")\n",
     "        balance += 3000\n",
-    "        print(f\"チャージ残高は[{balance}]円です。\")\n",
+    "        print(f\"チャージ残高は{balance}円です。\")\n",
     "    return balance ,fare\n"
    ]
   },
