--- a/A.ipynb
+++ b/A.ipynb
@@ -70,8 +70,9 @@
     "                    print(\"正しい数値を入力してください。\")  #範囲外の数値が入力された場合\n",
     "                else:\n",
     "                    new_balance = charge*1000 + balance\n",
+    "                    print(\"チャージ残高は\"+str(new_balance)+\"円です。\")\n",
     "                    return(new_balance)\n",
-    "                \n",
+    "\n",
     "def select_station():\n",
     "  stations = [\"秋葉原\",\"山梨\",\"長野\"]\n",
     "  fares = [133, 4128, 7990]\n",
