13:16 charege関数金額リスト

--- a/A.ipynb
+++ b/A.ipynb
@@ -39,22 +39,10 @@
     "                print(\"正しい数値を入力してください.\")\n",
     "        \n",
     "def charge(balance):\n",
-    "\n",
-    "        #表示用\n",
-    "\n",
+    "    charges = [1000, 2000, 3000, 4000, 5000, 6000, 7000, 8000, 9000, 10000]\n",
     "    print(\"チャージ残高は\"+str(balance)+\"円です。\")\n",
-    "    print(\"\\n\")\n",
-    "    print(\"1:1000円\")\n",
-    "    print(\"2:2000円\")\n",
-    "    print(\"3:3000円\")\n",
-    "    print(\"4:4000円\")\n",
-    "    print(\"5:5000円\")\n",
-    "    print(\"6:6000円\")\n",
-    "    print(\"7:7000円\")\n",
-    "    print(\"8:8000円\")\n",
-    "    print(\"9:9000円\")\n",
-    "    print(\"10:10000円\")\n",
-    "    print(\"\\n\")\n",
+    "    for i in range(len(charges)):\n",
+    "      print(f\"{i + 1}：{charges[i]}円\")\n",
     "    print(\"チャージする金額を選択してください。(キャンセルする場合には99を入力)\")\n",
     "\n",
     "    while True:\n",
@@ -65,7 +53,7 @@
     "            else:\n",
     "                if charge == 99:\n",
     "                    print(\"チャージをキャンセルしました。\") #キャンセル\n",
-    "                    break\n",
+    "                    return balance\n",
     "                elif charge > 10 or charge < 1:\n",
     "                    print(\"正しい数値を入力してください。\")  #範囲外の数値が入力された場合\n",
     "                else:\n",
@@ -118,7 +106,7 @@
     "        print(\"残高が500 円未満のため3000 円自動チャージします\")\n",
     "        balance += 3000\n",
     "        print(f\"チャージ残高は{balance}円です。\")\n",
-    "    return balance ,fare\n"
+    "    return balance\n"
    ]
   },
   {
@@ -126,7 +114,37 @@
    "execution_count": null,
    "id": "f310d003",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "【ウチダ電鉄　交通系ICカード検証システム】\n",
+      "\n",
+      "\n",
+      "1:乗車駅選択\n",
+      "2:チャージ機能\n",
+      "\n",
+      "\n",
+      "使用する機能を入力してください(終了する場合には99を入力)\n",
+      "【乗車駅選択】\n",
+      "1：秋葉原駅まで133円\n",
+      "2：山梨駅まで4128円\n",
+      "3：長野駅まで7990円\n",
+      "\n",
+      "乗車した駅を入力してください（キャンセルする場合には99を入力）\n",
+      "駅の選択をキャンセルしました。\n",
+      "【ウチダ電鉄　交通系ICカード検証システム】\n",
+      "\n",
+      "\n",
+      "1:乗車駅選択\n",
+      "2:チャージ機能\n",
+      "\n",
+      "\n",
+      "使用する機能を入力してください(終了する場合には99を入力)\n"
+     ]
+    }
+   ],
    "source": [
     "def main():\n",
     "    balance = 500\n",
@@ -142,9 +160,10 @@
     "        elif main == 99:\n",
     "            print(\"システムを終了します\")\n",
     "            break\n",
+    "        else:\n",
+    "            print(\"正しい数値を入力してください。 \")\n",
     "if __name__ == \"__main__\":\n",
-    "        main()\n",
-    "\n"
+    "        main()\n"
    ]
   },
   {
