13:24 俺だってリストわかるもん！！！

--- a/A.ipynb
+++ b/A.ipynb
@@ -10,11 +10,11 @@
     "def menu():\n",
     "\n",
     "    #メニュー画面の文字の表示\n",
-    "\n",
+    "    functions = [\"乗車駅選択\",\"チャージ機能\"]\n",
     "    print(\"【ウチダ電鉄　交通系ICカード検証システム】\")\n",
     "    print(\"\\n\")\n",
-    "    print(\"1:乗車駅選択\")\n",
-    "    print(\"2:チャージ機能\")\n",
+    "    for i in range(len(functions)):\n",
+    "      print(str(i+1)+\":\"+functions[i])\n",
     "    print(\"\\n\")\n",
     "    print(\"使用する機能を入力してください(終了する場合には99を入力)\")\n",
     "\n",
@@ -37,7 +37,7 @@
     "\n",
     "            else:\n",
     "                print(\"正しい数値を入力してください.\")\n",
-    "        \n",
+    "print(menu())\n",
     "def charge(balance):\n",
     "    charges = [1000, 2000, 3000, 4000, 5000, 6000, 7000, 8000, 9000, 10000]\n",
     "    print(\"チャージ残高は\"+str(balance)+\"円です。\")\n",
@@ -164,16 +164,6 @@
     "            print(\"正しい数値を入力してください。 \")\n",
     "if __name__ == \"__main__\":\n",
     "        main()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a0073ef5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "menu()\n"
    ]
   }
  ],
