--- a/A.ipynb
+++ b/A.ipynb
@@ -5,7 +5,23 @@
    "execution_count": null,
    "id": "1ebc179e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "【ウチダ電鉄　交通系ICカード検証システム】\n",
+      "\n",
+      "\n",
+      "1:乗車駅選択\n",
+      "2:チャージ機能\n",
+      "\n",
+      "\n",
+      "使用する機能を入力してください(終了する場合には99を入力)\n",
+      "99\n"
+     ]
+    }
+   ],
    "source": [
     "def menu():\n",
     "\n",
@@ -37,12 +53,24 @@
     "\n",
     "            else:\n",
     "                print(\"正しい数値を入力してください.\")\n",
-    "print(menu())\n",
+    "\n",
     "def charge(balance):\n",
-    "    charges = [1000, 2000, 3000, 4000, 5000, 6000, 7000, 8000, 9000, 10000]\n",
+    "\n",
+    "        #表示用\n",
+    "\n",
     "    print(\"チャージ残高は\"+str(balance)+\"円です。\")\n",
-    "    for i in range(len(charges)):\n",
-    "      print(f\"{i + 1}：{charges[i]}円\")\n",
+    "    print(\"\\n\")\n",
+    "    print(\"1:1000円\")\n",
+    "    print(\"2:2000円\")\n",
+    "    print(\"3:3000円\")\n",
+    "    print(\"4:4000円\")\n",
+    "    print(\"5:5000円\")\n",
+    "    print(\"6:6000円\")\n",
+    "    print(\"7:7000円\")\n",
+    "    print(\"8:8000円\")\n",
+    "    print(\"9:9000円\")\n",
+    "    print(\"10:10000円\")\n",
+    "    print(\"\\n\")\n",
     "    print(\"チャージする金額を選択してください。(キャンセルする場合には99を入力)\")\n",
     "\n",
     "    while True:\n",
@@ -60,7 +88,6 @@
     "                    new_balance = charge*1000 + balance\n",
     "                    print(\"チャージ残高は\"+str(new_balance)+\"円です。\")\n",
     "                    return(new_balance)\n",
-    "\n",
     "def select_station():\n",
     "  stations = [\"秋葉原\",\"山梨\",\"長野\"]\n",
     "  fares = [133, 4128, 7990]\n",
@@ -127,21 +154,9 @@
       "\n",
       "\n",
       "使用する機能を入力してください(終了する場合には99を入力)\n",
-      "【乗車駅選択】\n",
-      "1：秋葉原駅まで133円\n",
-      "2：山梨駅まで4128円\n",
-      "3：長野駅まで7990円\n",
-      "\n",
-      "乗車した駅を入力してください（キャンセルする場合には99を入力）\n",
-      "駅の選択をキャンセルしました。\n",
-      "【ウチダ電鉄　交通系ICカード検証システム】\n",
-      "\n",
-      "\n",
-      "1:乗車駅選択\n",
-      "2:チャージ機能\n",
-      "\n",
-      "\n",
-      "使用する機能を入力してください(終了する場合には99を入力)\n"
+      "数字を入力してください\n",
+      "数字を入力してください\n",
+      "数字を入力してください\n"
      ]
     }
    ],
